--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -9,83 +9,67 @@ supabase-Project-Authentication-Url configuration-site url-->
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Logowanie – Supabase</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Logowanie Supabase</title>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/supabase.min.js"></script>
 
-<style>
-  body { font-family: Arial, sans-serif; }
-  .login-btn { margin: 40px; padding: 12px 20px; font-size: 16px; cursor: pointer; }
-  #loginModal { display: none; position: fixed; inset:0; background: rgba(0,0,0,0.6); justify-content:center; align-items:center; }
-  .modal { background:white; padding:20px; border-radius:8px; width:300px; text-align:center; }
-  .modal input, .modal button { width:100%; margin-top:10px; padding:10px; font-size:15px; }
-  .google { background:#4285F4; color:white; border:none; }
-  .email { background:#555; color:white; border:none; }
-</style>
-
-<!-- Supabase SDK z defer, żeby upewnić się, że dokument się załadował -->
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/supabase.min.js" defer></script>
+  <style>
+    body { font-family: Arial, sans-serif; }
+    .modal { display: none; position: fixed; inset:0; background: rgba(0,0,0,0.5); justify-content:center; align-items:center; }
+    .modal-content { background:#fff; padding:20px; border-radius:8px; width:300px; text-align:center; }
+    input, button { width: 100%; padding:10px; margin:5px 0; font-size:16px; }
+    .google-button { background:#4285F4; color:#fff; border:none; }
+    .email-button { background:#555; color:#fff; border:none; }
+  </style>
 </head>
-
 <body>
 
-<button class="login-btn" onclick="openModal()">Zaloguj się</button>
+<button onclick="openModal()">Zaloguj się</button>
 
-<div id="loginModal">
-  <div class="modal">
+<div class="modal" id="loginModal">
+  <div class="modal-content">
     <h3>Logowanie</h3>
     <input id="email" type="email" placeholder="Email">
-    <button class="email" id="emailLoginBtn">Wyślij link logowania</button>
-    <button class="google" id="googleLoginBtn">Zaloguj Google</button>
+    <button class="email-button" onclick="loginWithEmail()">Zaloguj e-mailem</button>
+    <button class="google-button" onclick="loginGoogle()">Zaloguj Google</button>
     <button onclick="closeModal()">Zamknij</button>
   </div>
 </div>
 
-<script defer>
-document.addEventListener("DOMContentLoaded", () => {
+<script>
+  // 1. Inicjalizacja Supabase
+  const SUPABASE_URL = 'https://tfbqqduxtsacvwfigsvt.supabase.co';
+  const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8';
+  const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-  // 🔹 Supabase config
-  const SUPABASE_URL = "https://tfbqqduxtsacvwfigsvt.supabase.co";
-  const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8";
-  const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+  // 2. Modal
+  function openModal() { document.getElementById('loginModal').style.display = 'flex'; }
+  function closeModal() { document.getElementById('loginModal').style.display = 'none'; }
 
-  // 🔹 Modal
-  window.openModal = () => document.getElementById("loginModal").style.display = "flex";
-  window.closeModal = () => document.getElementById("loginModal").style.display = "none";
-
-  // 🔹 Email Magic Link
-  document.getElementById("emailLoginBtn").addEventListener("click", async () => {
-    const email = document.getElementById("email").value;
-    if (!email) return alert("Podaj email");
-
-    const { error } = await supabaseClient.auth.signInWithOtp({
-      email,
-      options: { emailRedirectTo: "https://orep.pl/wyszukiwarka/" }
+  // 3. Logowanie Google
+  async function loginGoogle() {
+    const { error } = await supabase.auth.signInWithOAuth({
+      provider: 'google',
+      options: { redirectTo: window.location.href } // dopasuj do swojej strony
     });
+    if(error) alert('Błąd Google: ' + error.message);
+  }
 
-    if (error) alert("Błąd wysyłki linku: " + error.message);
-    else { alert("Sprawdź swoją skrzynkę i kliknij w link logowania"); closeModal(); }
+  // 4. Logowanie email
+  async function loginWithEmail() {
+    const email = document.getElementById('email').value;
+    if(!email) return alert('Podaj email');
+    const { error } = await supabase.auth.signInWithOtp({ email });
+    if(error) alert('Błąd e-mail: ' + error.message);
+    else { alert('Sprawdź e-mail'); closeModal(); }
+  }
+
+  // 5. Autorefresh sesji
+  supabase.auth.onAuthStateChange((event, session) => {
+    if(session?.user?.email) alert('Zalogowano jako: ' + session.user.email);
   });
-
-  // 🔹 Google Login
-  document.getElementById("googleLoginBtn").addEventListener("click", async () => {
-    const { error } = await supabaseClient.auth.signInWithOAuth({
-      provider: "google",
-      options: { redirectTo: "https://orep.pl/wyszukiwarka/" }
-    });
-
-    if (error) alert("Błąd Google: " + error.message);
-  });
-
-  // 🔹 Obsługa sesji
-  supabaseClient.auth.onAuthStateChange((event, session) => {
-    if(session?.user?.email) {
-      alert("Zalogowano jako: " + session.user.email);
-      closeModal();
-    }
-  });
-
-});
 </script>
+
 </body>
 </html>
