--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -1,87 +1,126 @@
 <!--
-Supabase URL Configuration i rURL (logowanie)
+========================================================
+ SUPABASE + GOOGLE OAUTH – PEŁNA KONFIGURACJA (DZIAŁAJĄCA)
+========================================================
+
+1️⃣ Supabase URL Configuration
 https://supabase.com/dashboard/project/tfbqqduxtsacvwfigsvt/auth/url-configuration
 
-  Supabase Auth Providers wł/Google i e mail logowanie(logowanie)
- https://supabase.com/dashboard/project/tfbqqduxtsacvwfigsvt/auth/providers
+   Site URL:
+   https://orep.pl/wyszukiwarka/
 
- Supabase_URL (połaczenie strony z baza danych)
+   Redirect URLs:
+   https://orep.pl/wyszukiwarka/
+   http://localhost:5500
+
+2️⃣ Supabase Auth → Providers
+https://supabase.com/dashboard/project/tfbqqduxtsacvwfigsvt/auth/providers
+
+   Google:
+   Client ID:
+   798508427098-8fe57nmc7igek6nv24cchjhtunm0hb5n.apps.googleusercontent.com
+
+   Callback URL (NIE ZMIENIAĆ):
+   https://tfbqqduxtsacvwfigsvt.supabase.co/auth/v1/callback
+
+3️⃣ Google Cloud Console – OAuth Client
+https://console.cloud.google.com/apis/credentials
+
+   Authorized JavaScript origins:
+   https://orep.pl
+   http://localhost:5500
+
+   Authorized redirect URI:
+   https://tfbqqduxtsacvwfigsvt.supabase.co/auth/v1/callback
+
+4️⃣ Supabase API (połączenie strony z backendem)
 https://supabase.com/dashboard/project/tfbqqduxtsacvwfigsvt/settings/api
 
-Supabase _KEY(połaczenie strony z baza danych)
- https://supabase.com/dashboard/project/tfbqqduxtsacvwfigsvt/settings/api-keys/legacy
+   Używany klucz:
+   anon public key (NIE service_role)
 
-Oto dokładny link, który musisz otworzyć, żeby ustawić dane OAuth w Google dla logowania Google (to jest strona, gdzie dodajesz redirect URI i Client ID):
- https://console.cloud.google.com/auth/clients/798508427098-8fe57nmc7igek6nv24cchjhtunm0hb5n.apps.googleusercontent.com?project=exemplary-tide-459310-k2
+========================================================
+ PLIK GOTOWY DO UŻYCIA – NIE EDYTUJ LOGIKI
+========================================================
 -->
 
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Logowanie Supabase</title>
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/supabase.min.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Logowanie – Supabase</title>
+
+  <!-- Supabase JS v2 (UMD – bezpieczny na hostingu) -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/supabase.min.js" defer></script>
 
   <style>
-    body { font-family: Arial, sans-serif; }
-    .modal { display: none; position: fixed; inset:0; background: rgba(0,0,0,0.5); justify-content:center; align-items:center; }
-    .modal-content { background:#fff; padding:20px; border-radius:8px; width:300px; text-align:center; }
-    input, button { width: 100%; padding:10px; margin:5px 0; font-size:16px; }
-    .google-button { background:#4285F4; color:#fff; border:none; }
-    .email-button { background:#555; color:#fff; border:none; }
+    body { font-family: Arial, sans-serif; padding: 40px; }
+    button { padding: 12px; width: 100%; margin: 6px 0; font-size: 16px; cursor: pointer; }
+    .google { background: #4285F4; color: white; border: none; }
+    .email { background: #555; color: white; border: none; }
+    .modal { display: none; position: fixed; inset: 0; background: rgba(0,0,0,.5); justify-content: center; align-items: center; }
+    .box { background: white; padding: 20px; width: 300px; border-radius: 8px; text-align: center; }
+    input { width: 100%; padding: 10px; margin-bottom: 8px; font-size: 16px; }
   </style>
 </head>
+
 <body>
 
-<button onclick="openModal()">Zaloguj się</button>
+<button id="openLogin">Zaloguj się</button>
 
 <div class="modal" id="loginModal">
-  <div class="modal-content">
+  <div class="box">
     <h3>Logowanie</h3>
-    <input id="email" type="email" placeholder="Email">
-    <button class="email-button" onclick="loginWithEmail()">Zaloguj e-mailem</button>
-    <button class="google-button" onclick="loginGoogle()">Zaloguj Google</button>
-    <button onclick="closeModal()">Zamknij</button>
+
+    <input type="email" id="emailInput" placeholder="Email" />
+
+    <button class="email" id="emailBtn">Zaloguj e-mailem</button>
+    <button class="google" id="googleBtn">Zaloguj Google</button>
+
+    <button id="closeLogin">Zamknij</button>
   </div>
 </div>
 
 <script>
-  // 1. Najpierw inicjalizacja Supabase
+document.addEventListener('DOMContentLoaded', () => {
+
+  /* === SUPABASE INIT === */
   const SUPABASE_URL = 'https://tfbqqduxtsacvwfigsvt.supabase.co';
-  const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8';
+  const SUPABASE_KEY =
+    'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8';
+
   const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-  // 2. Modal
-  function openModal() { document.getElementById('loginModal').style.display = 'flex'; }
-  function closeModal() { document.getElementById('loginModal').style.display = 'none'; }
+  /* === MODAL === */
+  const modal = document.getElementById('loginModal');
+  document.getElementById('openLogin').onclick = () => modal.style.display = 'flex';
+  document.getElementById('closeLogin').onclick = () => modal.style.display = 'none';
 
-  // 3. Logowanie Google
-  async function loginGoogle() {
+  /* === GOOGLE LOGIN === */
+  document.getElementById('googleBtn').onclick = async () => {
     const { error } = await supabaseClient.auth.signInWithOAuth({
       provider: 'google',
-     options: { redirectTo: window.location.origin } // twoja strona po zalogowaniu
+      options: { redirectTo: 'https://orep.pl/wyszukiwarka/' }
     });
-    if(error) alert('Błąd Google: ' + error.message);
-  }
+    if (error) alert(error.message);
+  };
 
-  // 4. Logowanie e-mailem
-  async function loginWithEmail() {
-    const email = document.getElementById('email').value;
-    if(!email) return alert('Podaj email');
+  /* === EMAIL LOGIN === */
+  document.getElementById('emailBtn').onclick = async () => {
+    const email = document.getElementById('emailInput').value.trim();
+    if (!email) return alert('Podaj email');
 
-    const { error } = await supabaseClient.auth.signInWithOtp({ email });
-    if(error) alert('Błąd e-mail: ' + error.message);
-    else { alert('Sprawdź e-mail (link logowania)'); closeModal(); }
-  }
+    const { error } = await supabaseClient.auth.signInWithOtp({
+      email,
+      options: { emailRedirectTo: 'https://orep.pl/wyszukiwarka/' }
+    });
 
-  // 5. Autorefresh sesji
-  supabaseClient.auth.onAuthStateChange((event, session) => {
-    if(session?.user?.email) {
-      console.log('Zalogowano jako:', session.user.email);
-      // np. możesz przekierować: window.location.href = "/wyszukiwarka/";
-    }
-  });
+    if (error) alert(error.message);
+    else alert('Sprawdź e-mail (link logowania)');
+  };
+
+});
 </script>
 
 </body>
