--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -1,8 +1,3 @@
-<!--
-========================================================
- SUPABASE + GOOGLE OAUTH – PEŁNA KONFIGURACJA (DZIAŁAJĄCA)
-========================================================
--->
 <!DOCTYPE html>
 <html lang="pl">
 <head>
@@ -26,12 +21,12 @@
 
 <body>
 
-<button id="openLogin">Zaloguj się</button>
+<button id="openLogin" aria-haspopup="dialog">Zaloguj się</button>
 
-<div class="modal" id="loginModal">
+<div class="modal" id="loginModal" role="dialog" aria-modal="true" aria-labelledby="loginTitle">
   <div class="box">
-    <h3>Logowanie</h3>
-    <input type="email" id="emailInput" placeholder="Email" />
+    <h3 id="loginTitle">Logowanie</h3>
+    <input type="email" id="emailInput" placeholder="Email" aria-label="Email" />
     <button class="email" id="emailBtn">Zaloguj e-mailem</button>
     <button class="google" id="googleBtn">Zaloguj Google</button>
     <button id="closeLogin">Zamknij</button>
@@ -39,28 +34,55 @@
 </div>
 
 <script>
-  // === INIT SUPABASE ===
+document.addEventListener('DOMContentLoaded', () => {
+  // === KONFIGURACJA SUPABASE ===
   const SUPABASE_URL = 'https://tfbqqduxtsacvwfigsvt.supabase.co';
-  const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8';
+  // Klucz pozostawiony w tym pliku zgodnie z Twoją prośbą.
+  const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZ[...]';
   const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-  // === MODAL ===
+  // === ELEMENTY UI ===
   const modal = document.getElementById('loginModal');
-  document.getElementById('openLogin').onclick = () => modal.style.display = 'flex';
-  document.getElementById('closeLogin').onclick = () => modal.style.display = 'none';
+  const openLogin = document.getElementById('openLogin');
+  const closeLogin = document.getElementById('closeLogin');
+  const googleBtn = document.getElementById('googleBtn');
+  const emailBtn = document.getElementById('emailBtn');
+  const emailInput = document.getElementById('emailInput');
+
+  openLogin.addEventListener('click', () => {
+    modal.style.display = 'flex';
+    // ustaw focus na polu email dla lepszej dostępności
+    emailInput.focus();
+  });
+
+  closeLogin.addEventListener('click', () => {
+    modal.style.display = 'none';
+  });
+
+  // Zamknięcie po kliknięciu w tło modala
+  modal.addEventListener('click', (e) => {
+    if (e.target === modal) modal.style.display = 'none';
+  });
+
+  // Esc zamyka modal
+  document.addEventListener('keydown', (e) => {
+    if (e.key === 'Escape' && modal.style.display === 'flex') {
+      modal.style.display = 'none';
+    }
+  });
 
   // === GOOGLE LOGIN ===
-  document.getElementById('googleBtn').onclick = async () => {
+  googleBtn.addEventListener('click', async () => {
     const { error } = await supabaseClient.auth.signInWithOAuth({
       provider: 'google',
       options: { redirectTo: 'https://orep.pl/wyszukiwarka' }
     });
     if (error) alert('Błąd Google: ' + error.message);
-  };
+  });
 
-  // === EMAIL LOGIN ===
-  document.getElementById('emailBtn').onclick = async () => {
-    const email = document.getElementById('emailInput').value.trim();
+  // === EMAIL LOGIN (magic link) ===
+  emailBtn.addEventListener('click', async () => {
+    const email = emailInput.value.trim();
     if (!email) return alert('Podaj email');
 
     const { error } = await supabaseClient.auth.signInWithOtp({
@@ -70,16 +92,27 @@
 
     if (error) alert('Błąd e-mail: ' + error.message);
     else alert('Sprawdź e-mail (link logowania)');
-  };
+  });
 
-  // === SESSION REFRESH / REDIRECT ===
-  supabaseClient.auth.onAuthStateChange((event, session) => {
-    if(session?.user?.email) {
+  // === OBSERWACJA STANU AUTORYZACJI ===
+  // Supabase JS v2: onAuthStateChange zwraca obiekt, z którego można pobrać subscription do odłączenia
+  const { data } = supabaseClient.auth.onAuthStateChange((event, session) => {
+    if (session?.user?.email) {
       console.log('Zalogowano jako:', session.user.email);
       // automatyczne przekierowanie po zalogowaniu
+      // Upewnij się, że to nie powoduje pętli redirectów (adres redirectTo z OAuth/magic link).
       window.location.href = '/wyszukiwarka';
     }
   });
+  const subscription = data?.subscription;
+
+  // Odłącz subskrypcję przy unload, żeby uniknąć wycieków
+  window.addEventListener('beforeunload', () => {
+    if (subscription && typeof subscription.unsubscribe === 'function') {
+      subscription.unsubscribe();
+    }
+  });
+});
 </script>
 
 </body>
