--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -2,8 +2,8 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <title>Logowanie – OREP</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Logowanie – Supabase</title>
 
   <style>
     body {
@@ -11,115 +11,140 @@
       padding: 40px;
     }
 
-    button {
-      padding: 10px 16px;
+    .avatar-btn {
+      width: 48px;
+      height: 48px;
+      border-radius: 50%;
+      background: #888;
+      color: #fff;
+      font-weight: bold;
+      border: none;
       cursor: pointer;
+      font-size: 20px;
     }
 
-    #loginModal {
+    .modal {
       display: none;
       position: fixed;
       inset: 0;
       background: rgba(0,0,0,.5);
       justify-content: center;
       align-items: center;
+      z-index: 9999;
     }
 
-    .modal-box {
+    .box {
       background: #fff;
       padding: 20px;
       width: 320px;
       border-radius: 8px;
+      text-align: center;
     }
 
     input {
       width: 100%;
       padding: 10px;
-      margin: 10px 0;
+      margin-bottom: 10px;
+      font-size: 16px;
+    }
+
+    button {
+      width: 100%;
+      padding: 12px;
+      margin-top: 6px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    .email {
+      background: #555;
+      color: white;
+      border: none;
     }
   </style>
 </head>
 
 <body>
 
-<button id="avatarBtn">Zaloguj się</button>
-<span id="userLabel"></span>
+<button id="avatarBtn" class="avatar-btn" type="button">👤</button>
 
-<div id="loginModal">
-  <div class="modal-box">
-    <h3>Logowanie e-mail</h3>
+<div class="modal" id="loginModal">
+  <div class="box">
+    <h3>Logowanie</h3>
 
-    <input id="emailInput" type="email" placeholder="email@example.com" />
-    <button id="emailBtn">Wyślij link logowania</button>
+    <input
+      type="email"
+      id="emailInput"
+      placeholder="Email"
+      autocomplete="email"
+    />
 
-    <hr />
-
-    <button id="logoutBtn">Wyloguj</button>
+    <button id="emailBtn" class="email">Zaloguj e-mailem</button>
     <button id="closeLogin">Zamknij</button>
   </div>
 </div>
 
-<!-- JEDYNY SCRIPT -->
+<!-- ✅ JEDYNY SCRIPT – JAKO MODULE -->
 <script type="module">
-import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
+  import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
 
-/* ====== SUPABASE CONFIG ====== */
-const SUPABASE_URL = "https://tfbqqduxtsacvwfigsvt.supabase.co";
-const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8";
+  console.log("✅ JS załadowany");
 
-const supabase = createClient(SUPABASE_URL, SUPABASE_KEY);
+  // ===== SUPABASE CONFIG =====
+  const SUPABASE_URL = "https://tfbqqduxtsacvwfigsvt.supabase.co";
+  const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8";
 
-/* ====== ELEMENTY ====== */
-const avatarBtn = document.getElementById('avatarBtn');
-const userLabel = document.getElementById('userLabel');
-const modal = document.getElementById('loginModal');
-const closeLogin = document.getElementById('closeLogin');
-const emailBtn = document.getElementById('emailBtn');
-const emailInput = document.getElementById('emailInput');
-const logoutBtn = document.getElementById('logoutBtn');
+  const supabase = createClient(
+    SUPABASE_URL,
+    SUPABASE_ANON_KEY
+  );
 
-/* ====== MODAL ====== */
-avatarBtn.onclick = () => modal.style.display = 'flex';
-closeLogin.onclick = () => modal.style.display = 'none';
+  // ===== ELEMENTY UI =====
+  const avatarBtn = document.getElementById("avatarBtn");
+  const modal = document.getElementById("loginModal");
+  const closeLogin = document.getElementById("closeLogin");
+  const emailBtn = document.getElementById("emailBtn");
+  const emailInput = document.getElementById("emailInput");
 
-/* ====== LOGOWANIE EMAIL ====== */
-emailBtn.onclick = async () => {
-  const email = emailInput.value.trim();
-  if (!email) {
-    alert('Podaj email');
-    return;
-  }
-
-  const { error } = await supabase.auth.signInWithOtp({
-    email,
-    options: {
-      emailRedirectTo: 'https://orep.pl/wyszukiwarka'
-    }
+  // ===== OTWIERANIE MODALA =====
+  avatarBtn.addEventListener("click", () => {
+    modal.style.display = "flex";
   });
 
-  if (error) {
-    alert('Błąd: ' + error.message);
-  } else {
-    alert('Link logowania wysłany – sprawdź e-mail');
-  }
-};
+  closeLogin.addEventListener("click", () => {
+    modal.style.display = "none";
+  });
 
-/* ====== WYLOGOWANIE ====== */
-logoutBtn.onclick = async () => {
-  await supabase.auth.signOut();
-  userLabel.textContent = '';
-  alert('Wylogowano');
-};
+  modal.addEventListener("click", (e) => {
+    if (e.target === modal) modal.style.display = "none";
+  });
 
-/* ====== STAN UŻYTKOWNIKA ====== */
-supabase.auth.onAuthStateChange((event, session) => {
-  if (session?.user) {
-    userLabel.textContent = session.user.email;
-    modal.style.display = 'none';
-  } else {
-    userLabel.textContent = '';
-  }
-});
+  // ===== LOGOWANIE EMAIL OTP =====
+  emailBtn.addEventListener("click", async () => {
+    const email = emailInput.value.trim();
+
+    if (!email) {
+      alert("Podaj email");
+      return;
+    }
+
+    console.log("➡️ Wysyłam OTP do:", email);
+
+    const { error } = await supabase.auth.signInWithOtp({
+      email,
+      options: {
+        emailRedirectTo: "https://orep.pl/wyszukiwarka"
+      }
+    });
+
+    if (error) {
+      console.error("❌ Błąd Supabase:", error);
+      alert("Błąd: " + error.message);
+    } else {
+      alert("📧 Sprawdź email (link logowania)");
+      modal.style.display = "none";
+    }
+  });
 </script>
 
 </body>
