--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -97,6 +97,7 @@
   const supabase = createClient(
     SUPABASE_URL,
     SUPABASE_ANON_KEY
+      console.log("✅ ok załadowany");
   );
 
   // ===== ELEMENTY UI =====
