--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -96,9 +96,7 @@
 
   const supabase = createClient(
     SUPABASE_URL,
-    SUPABASE_ANON_KEY
-     
-  );
+    SUPABASE_ANON_KEY);
 
   // ===== ELEMENTY UI =====
   const avatarBtn = document.getElementById("avatarBtn");
